--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,3 +10,7 @@ bind r source-file ~/.tmux.conf
 # quick pane cycling
 # unbind ^A
 # bind ^A select-pane -t :.+
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
