Select panes with hjkl

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,3 +14,9 @@ bind r source-file ~/.tmux.conf
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
+
+# move around panes with hjkl, as one would in vim after pressing ctrl-w
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
