Use ctrl + o to toggle between zoomed/unzoomed

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,3 +20,6 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# toggle active pane between zoomed and unzoomed
+bind o resize-pane -Z
