--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,3 +23,9 @@ bind l select-pane -R
 
 # toggle active pane between zoomed and unzoomed
 bind o resize-pane -Z
+
+# Enable mouse things
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
