Add .gitconfig, update .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
-# remap prefix to Control + a
-set -g prefix C-a
+set -g default-terminal "xterm-256color"
+
+# remap prefix to Ctrl + t
+set -g prefix C-t
 unbind C-b
-bind C-a send-prefix
+bind C-t send-prefix
 
 # force a reload of the config file
 unbind r
@@ -24,8 +26,12 @@ bind l select-pane -R
 # toggle active pane between zoomed and unzoomed
 bind o resize-pane -Z
 
+# open new splits with the current working directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # Enable mouse things
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
+
+# Larger history limit
+set-option -g history-limit 3000
