--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,9 @@ bind o resize-pane -Z
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# open windows with the current working directory
+bind c new-window -c "#{pane_current_path}"
+
 # Enable mouse things
 set -g mouse on
 
