--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,6 @@
 [user]
 	name = Julich Mera
-	email = julichm@zillowgroup.com
-  initials = jm
+	email = julich.mera@gmail.com
+	initials = jm
 [core]
-  pager = /usr/local/opt/git/share/git-core/contrib/diff-highlight/diff-highlight | less
-  excludesFile = /Users/julichm/.gitignore
-[merge "npm-merge-driver"]
-  name = automatically merge npm lockfiles
-  driver = npx npm-merge-driver merge %A %O %B %P
+	pager = less
