--- a/.tigrc
+++ b/.tigrc
@@ -1,7 +1,7 @@
 set tab-size = 2
 
 set main-view = date:relative id:yes author:full,width=20 commit-title:yes,graph=yes,refs=yes
-set diff-highlight = less
+set diff-highlight = true
 
 color  default  default  default  normal
 
